# project1-RedisLite

./: README.md  doublylinkedList.h
CollectionsLib-RedisLite/: CMakeLists.txt  fix_guards.py  main.cpp
CollectionsLib-RedisLite/SuperStructureClass/: dynamicArray.h  hash.h  linkedList.cpp
CollectionsLib-RedisLite/design_proposal/: design_proposal_version2.md
CollectionsLib-RedisLite/docs/: design_proposal_version2.md  design_proposal_version3.md
CollectionsLib-RedisLite/docs/buildlog/: buildlog_22june_session1.md  buildlog_22june_session2.md  buildlog_22june_session3.md  buildlog_23june_session1.md  buildlog_23june_session2.md  buildlog_23june_session3.md  buildlog_24june_session1.md  buildlog_24june_session2.md  buildlog_24june_session3.md  buildlog_25june_session1.md  buildlog_25june_session2.md  buildlog_25june_session3.md  buildlog_26june_session1.md  buildlog_26june_session3.md  buildlog_26une_session2.md  buildlog_29june_session1.md  buildlog_29june_session2.md  buildlog_30june_session1.md  buildlog_30june_session2.md  buildlog_30june_session3.md  buildlog_session1.md  buildlog_session4.md
CollectionsLib-RedisLite/docs/dailyjournals/: dailyjournal_23june.md  dailyjournal_24june.md  dailyjournal_25june.md  dailyjournal_26june.md  dailyjournal_29june.md  dailyjournal_30june.md
CollectionsLib-RedisLite/include/: CollectionsLib.h  doublylinkedList.h  dynamicArray.h  hash.h  hashmap.h  linkedList.h  parser.h  redis.h
CollectionsLib-RedisLite/src/: cmake.txt  doublylinkedList.cpp  dynamicArray.cpp  hash.cpp  hashmap.cpp  linkedList.cpp  parser.cpp  redis.cpp
CollectionsLib-RedisLite/tests/: doublylinkedlisttesting.cpp  dynamicArraytesting.cpp  hashmaptesting.cpp  linkedlist.cpp  parsertesting.cpp  redislitetesting.cpp
SuperStructureClass/: hashmap.cpp
